# Distributed-YOLO-Robot-Following-System

./: README.md  readme.md  readme_cn.md  set_ros_robot.sh  set_ros_wsl.sh
WSL端·虚拟机端·本地电脑端/yolo_tracking/: CMakeLists.txt  package.xml
WSL端·虚拟机端·本地电脑端/yolo_tracking/launch/: wsl_all_in_one.launch
WSL端·虚拟机端·本地电脑端/yolo_tracking/msg/: YoloDetection.msg
WSL端·虚拟机端·本地电脑端/yolo_tracking/scripts/: run_yolo_detector.sh  yolo_detector_sender_ui_node.py
WSL端·虚拟机端·本地电脑端/yolo_tracking/worlds/: yolo_tracking_world.world
机器人端/yolo_tracking/: CMakeLists.txt  package.xml
机器人端/yolo_tracking/launch/: robot_all_in_one.launch
机器人端/yolo_tracking/msg/: YoloDetection.msg
机器人端/yolo_tracking/scripts/: yolo_detection_bridge_node.py  yolo_node_release.py
